# anime-subtitle-companion

./: .gitignore  README.md  anime_subtitle_companion_spec.md  run.py
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: annotations.py  flashcards.py  router.py  subtitles.py
backend/app/models/: schemas.py
backend/app/services/: annotation_service.py  dictionary_links.py  llm_client.py  subtitle_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: FileUpload.tsx  PlayerControls.tsx  SessionPicker.tsx  SidePanel.tsx  SubtitleLine.tsx  TranscriptView.tsx
frontend/src/hooks/: useActiveBlock.ts  usePlaybackTimer.ts
frontend/src/styles/: index.css
frontend/src/types/: subtitle.ts
