[project]
name = "anime-subtitle-companion-backend"
version = "0.1.0"
description = "Backend for the Anime Subtitle Companion"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "pysubs2>=1.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.20",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
